c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/extra_credit/union_member_initializer.c
union a {
    // union members cannot have initializers
    int member = 1;
};